Pending changes in the mainline
===============================


Version 1.0 (2022-04-26)
========================

=> Minimum SDK version: 1.10.1 <=

* Initial release