@@ -11256,6 +11256,8 @@ static void LoadInstance_98(Neuro::DicomInstancesCollection& target)
   tags.SetValue(0x0008, 0x0060, "MR", false);
   tags.SetValue(0x0008, 0x0070, "Philips Medical Systems", false);
   tags.SetValue(0x0020, 0x0013, "4835", false);
+  tags.SetValue(0x2005, 0x1409, "0", false);
+  tags.SetValue(0x2005, 0x140a, "4.00757020757020", false);
   tags.SetValue(0x0018, 0x0080, "2000.00061035156", false);
   tags.SetValue(0x0018, 0x0081, "30", false);
   tags.SetValue(0x0018, 0x1312, "COL", false);
@@ -11309,7 +11311,7 @@ TEST(Autogenerated, Test_98)
   ASSERT_FLOAT_EQ(nifti.intent_p2, 0);
   ASSERT_FLOAT_EQ(nifti.intent_p3, 0);
   ASSERT_FLOAT_EQ(nifti.pixdim[0], -1.000000);
-  ASSERT_FLOAT_EQ(nifti.scl_slope, 75.538353);
+  ASSERT_FLOAT_EQ(nifti.scl_slope, 4.007570);
   ASSERT_FLOAT_EQ(nifti.scl_inter, 0.000000);
   ASSERT_FLOAT_EQ(nifti.cal_min, 0.000000);
   ASSERT_FLOAT_EQ(nifti.cal_max, 0.000000);
