@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Support Philips private tags for rescale slope/intercept
+
 
 Version 1.0 (2022-04-26)
 ========================
